# stadsspel

./: .gitattributes  .gitignore  .gitmodules  .ignore  README.md
app/: build_and_install_android.sh  make.rb  test.c
app/android/: .gitignore  AndroidManifest.xml  AndroidManifest.xml.template  CMakeLists.txt  Makefile  README.md  ______main.c  __main.c  _self_main.c  build.sh  create-keystore.sh  debugger.sh  debugger_attach.sh  debugger_lldb_commands  debugger_start.sh  emulator_start.sh  main.c  main.cpp  make.rb  output.map  pipecolor.rb  stadsspel.apk.idsig  start_lldb_server.sh
app/android/Stadsspel/: settings.gradle.kts
app/android/Stadsspel/app/: build.gradle.kts
app/android/Stadsspel/app/src/main/: AndroidManifest.xml
app/android/Stadsspel/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/android/Stadsspel/app/src/main/java/be/jonaseveraert/stadsspel/: MainActivity.java
app/android/Stadsspel/app/src/main/res/values/: strings.xml  themes.xml
app/android/Stadsspel/app/src/main/res/values-night/: themes.xml
app/android/Stadsspel/gradle/wrapper/: gradle-wrapper.properties
app/android/dev-util/: build_app.sh  emulator_log.sh  gen_key.sh  in_colorize.rb  install_app.sh  log_colorizer.rb
app/build-util/: build_lib.rb  build_lib_manual.rb  determine_cc.rb  make_xcframework.rb  platform_flags.rb  xcode.rb
app/build-util/meson-cross/: ios-gen.rb  ios.toml
app/common/: Sdk.zig  auto-detect.zig  build.zig  build.zig.zon  zig_build.rb
app/common/.build_config/: android.json
app/common/app/: app.c  default_ui.c  login.c  map.c  renderer.c  root_ui.c  scoreboard.c
app/common/app/include/: app.h  bufferReallocator.h  default_ui.h  login.h  map.h  renderer.h  root_ui.h  scoreboard.h
app/common/arena/: varena.c
app/common/arena/include/: arena.h  varena.h
app/common/hashmap/src/: lib.zig
app/common/linked_list/src/: lib.zig
app/common/map_data/src/: nodes_iter.zig  parser.c  render_objects.zig
app/common/render_backends/: make.rb
app/common/render_backends/CoreGraphics/: render_backend_CoreGraphics.m
app/common/render_backends/SDL/: render_backend_sdl.c
app/common/render_frontend/: renderer.h
app/common/renderer/: coordinate_transform.c  map_view.c  renderer.c
app/common/renderer/include/: coordinate_transform.h  map_view.h  renderer.h
app/common/server-glue/include/: api.h
app/common/server-glue/tst/: api.c
app/common/ui/: background_view.c  list_view.c  map_view.c  nav_view.c  scoreboard.c  scoreboard_nav_item.c  thick_line.c  view.c
app/common/ui/include/: background_view.h  color.h  list_view.h  map_view.h  nav_view.h  scoreboard.h  scoreboard_nav_item.h  thick_line.h  view.h
app/common/uirenderer/: apprenderer.c  coordinate_transform.c  list_item_view.c  list_view.c  map_view.c  nav_elements.c  nav_view.c
app/common/util/: allocator.c  uuid.c
app/common/vec/: vec.c  veca.c
app/macOS/: macosmain.c  make.rb
app/tests/: main.c  make.rb
app/tests/arena/: varena.c
(+39 files in other folders)
